--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Release Creation
 
 on:
-  release:
-    types: [published]
+  #release:
+    #types: [published]
+  workflow-dispatch:
 
 jobs:
   build:
