--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PF2e-warlord",
+  "name": "pd2e-warlord",
   "version": "1.3.2",
   "description": "Pf2e Warlord Homebrew",
   "scripts": {
@@ -15,6 +15,6 @@
   },
   "homepage": "https://github.com/nythz/pf2e-warlord#readme",
   "devDependencies": {
-    "@foundryvtt/foundryvtt-cli": "^1.0.2",
+    "@foundryvtt/foundryvtt-cli": "^1.0.2"
   }
 }
