--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,9 +44,9 @@ jobs:
           tag: ${{ github.event.release.tag_name }}
           body: ${{ github.event.release.body }}
       # POST to the package admin release endpoint    
-      - name: Publish Module to FoundryVTT Website
-        id: publish-to-foundry-website
-        uses: cs96and/FoundryVTT-release-package@v1
-        with:
-          package-token: ${{ secrets.PACKAGE_TOKEN }}
-          manifest-url: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.json
+      #- name: Publish Module to FoundryVTT Website
+      #  id: publish-to-foundry-website
+      #  uses: cs96and/FoundryVTT-release-package@v1
+      #  with:
+      #    package-token: ${{ secrets.PACKAGE_TOKEN }}
+      #    manifest-url: https://github.com/${{github.repository}}/releases/download/${{github.event.release.tag_name}}/module.json
