--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
 name: Release Creation
 
 on:
-  #release:
-    #types: [published]
-  workflow_dispatch:
+  release:
+    types: [published]
+  
 
 jobs:
   build:
