Update and rename prereleases.yml to branch-releases.yml

--- a/.github/workflows/branch-releases.yml
+++ b/.github/workflows/branch-releases.yml
@@ -1,4 +1,4 @@
-name: Pre-release
+name: branch-releases
 
 on:
   release:
@@ -38,7 +38,7 @@ jobs:
           allowUpdates: true # Set this to false if you want to prevent updating existing releases
           name: ${{ github.event.release.name }}
           draft: false
-          prerelease: false
+          prerelease: true
           token: ${{ secrets.GITHUB_TOKEN }}
           artifacts: "./module.json, ./module.zip"
           tag: ${{ github.event.release.tag_name }}
