--- a/.github/workflows/branch-releases.yml
+++ b/.github/workflows/branch-releases.yml
@@ -18,7 +18,7 @@ jobs:
       - run: zip -r ./module.zip module.json LICENSE packs/ assets/
 
       # Download module.zip artifact for local testing
-      -name: Download a single artifact
-       uses: actions/download-artifact@v4
-       with:
-        name: module.zip
+      - name: Download module.zip
+        uses: actions/download-artifact@v4
+        with:
+          name: ./module.zip
