--- a/.github/workflows/branch-releases.yml
+++ b/.github/workflows/branch-releases.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Download module.zip
         uses: actions/download-artifact@v4
         with:
-          name: ./module.zip
+          name: module.zip
