--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,8 @@ name: Release Creation
 
 on:
   release:
-    types: [released]
+    types: [published]
   
-
 jobs:
   build:
     runs-on: ubuntu-latest
