--- a/unpacks/warlord/Effect__Following_an_Inspiring_Paragon_NXqJnUA1OUH2uy0L.json
+++ b/unpacks/warlord/Effect__Following_an_Inspiring_Paragon_NXqJnUA1OUH2uy0L.json
@@ -12,7 +12,7 @@
       {
         "key": "ActiveEffectLike",
         "mode": "override",
-        "path": "flags.pf2e-warlord.inspiringparagonlevel",
+        "path": "flags.pf2e-warlord.paragonlevel",
         "value": "@item.origin.level",
         "priority": 20
       },
