--- a/unpacks/warlord/Effect__Following_an_Inspiring_Paragon_NXqJnUA1OUH2uy0L.json
+++ b/unpacks/warlord/Effect__Following_an_Inspiring_Paragon_NXqJnUA1OUH2uy0L.json
@@ -19,7 +19,7 @@
       {
         "key": "Note",
         "selector": "damage",
-        "text": "@UUID[Compendium.pf2e-warlord.warlord.Item.bYKyeCIOWtimch54]"
+        "text": "You gain @UUID[Compendium.pf2e-warlord.warlord.Item.bYKyeCIOWtimch54]"
       }
     ],
     "slug": null,
