--- a/unpacks/warlord/Bulwarking_Command_Guj32UjoTST0nX7S.json
+++ b/unpacks/warlord/Bulwarking_Command_Guj32UjoTST0nX7S.json
@@ -22,7 +22,8 @@
     "traits": {
       "otherTags": [],
       "value": [
-        "warlord"
+        "warlord",
+        "command"
       ],
       "rarity": "common"
     },
